# hw3.1

./: CMakeLists.txt  README.md  ans.txt  class.cpp  class.h  functions.cpp  functions.h  main.cpp  rez.txt  test.txt  tmp.txt
